--- a/package.json
+++ b/package.json
@@ -25,8 +25,21 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
-    "eslint": "8.19.0",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "eslint": "8.9.0",
+    "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "12.2.1",
+    "eslint-config-prettier": "8.4.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.27.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "1.4.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-sonarjs": "0.12.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.5.1",
     "typescript": "4.7.4"
   }
 }
